src/objects/ICG_Account_Role_Capability_Assignment__c.object
<CustomObject>
    <description>One Source Account Role Capability Assignment</description>
    <fields>
        <fullName>Account_Role_Detail_Capability__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Describes the account role detail capability linked</description>
        <label>Account Role Detail Capability</label>
        <referenceTo>Account_Role_Detail_Capability__c</referenceTo>
        <relationshipLabel>ONE Source Account Role Capability Assignments</relationshipLabel>
        <relationshipName>ICG_Account_Role_Capability_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICG_Account_Role_Detail__c</fullName>
        <description>Shows the facility related.</description>
        <label>ONE Source Account Role Detail</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipName>ICG_Account_Role_Capability_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ICG_Capability_Assignment_Group__c</fullName>
        <description>Describes the capability assignment group linked</description>
        <label>ONE Source Capability Assignment Group</label>
        <referenceTo>ICG_Capability_Assignment_Group__c</referenceTo>
        <relationshipLabel>ONE Source Account Role Capability Assignments</relationshipLabel>
        <relationshipName>ICG_Account_Role_Capability_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>In_Conflict_With__c</fullName>
        <description>Account_Role_Detail_Capability__c Ids which are in conlfict with this ICG_Account_Role_Capability_Assignment__c and need to be solved
Format: Array of strings as JSON Objects</description>
        <label>In Conflict With Other Capabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_In_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to know if this ICG_Account_Role_Capability_Assignment__c is in conflict with other/s multi-record Account_Role_Detail_Capability__c</description>
        <label>Is In Conflict With Others Capabilities</label>
        <type>Checkbox</type>
    </fields>
    <label>OS Account Role Capability Assignment</label>
    <nameField>
        <label>OS Account Role Capability Assignement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OS Account Role Capability Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>